# maskbench

./: .env.dist  .gitignore  .nojekyll  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  index.html  pyproject.toml  requirements.txt
.github/workflows/: maskbench-docker-publish.yml
config/: getting-started.yml  maskbench-config.yml  raw-masked-experiment.yml  ted-kid.yml  ted-talks.yml  tragic-talkers.yml
enroot_scripts/: check_services.sh  import_images.sh  readme.md  start_runner_service.sh  start_services.sh  stop_services.sh
mock_ui/: maskbench-html-compare.html  maskbench-html-dashboard.html  maskbench-html-history.html  maskbench-html-masked.html  maskbench-html-new-experiment.html  maskbench-html-results.html
report/: refs.bib  report.qmd
report/dependencies/: refs.bib  styles.css  theme.scss
src/: checkpointer.py  keypoint_pairs.py  main.py  utils.py  video_chunker.py
src/dataloader/: TED_dataloader.py  dataset_loader.py  video_sample.py
src/datasets/: __init__.py  dataset.py  ted_dataset.py  tragic_talkers_dataset.py  video_sample.py
src/evaluation/: __init__.py  evaluator.py  pose_result.py  utils.py  visualizer.py
src/inference/: __init__.py  engine.py  inference_engine.py  pose_result.py
src/models/: __init__.py  maskanyone_api_pose_estimator.py  maskanyone_pose_estimator.py  maskanyone_ui_pose_estimator.py  mediapipe_pose_estimator.py  open_pose_estimator.py  pose_estimator.py  yolo_pose_estimator.py
src/render/: pose_render.py
ui/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+69 files in other folders)
